kubernetes/aks/apps/louis/base/backend/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  selector:
    app: ollama
  ports:
    - port: 11434
      name: http
